Fix spacing of radio buttons

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@ canvas {
     background: #ffffff;
 }
 
-.checkbox {
+.checkbox, .radio {
     padding-left: 4px;
     padding-right: 4px;
 }
